--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,3 @@
 {
-    "env": {
-        "browser": true,
-        "es6": true
-    },
-    "extends": ["airbnb", "prettier"],
-    "plugins": [
-        "prettier"
-    ]
+    "extends": "airbnb-base"
 }
