--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "parcel build src/app.js -o app.js -d public --no-cache"
+    "build": "parcel build src/index.html -d public --no-cache"
   },
   "repository": {
     "type": "git",
