--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "parcel build src/index.html -d public --no-cache"
+    "build": "parcel build src/index.html -d public --no-cache",
+    "dev": "parcel serve src/index.html -d public --no-cache"
   },
   "repository": {
     "type": "git",
