--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "jest": "^23.6.0"
   },
   "dependencies": {
+    "express": "^4.16.4",
+    "helmet": "^3.15.0",
+    "mongoose": "^5.4.10",
     "parcel": "^1.10.3"
   },
   "jest": {
