--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "eslint": "^5.12.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "jest": "^23.6.0"
+    "jest": "^23.6.0",
+    "typescript": "^3.3.1",
+    "typescript-language-server": "^0.3.7"
   },
   "dependencies": {
     "parcel": "^1.10.3"
