--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,8 @@
     "browser": true,
     "jest": true
   },
-  "extends": "airbnb-base"
+  "extends": "airbnb-base",
+  "rules": { 
+    "no-console": 0
+  }
 }
