--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript-language-server": "^0.3.7"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-hbs": "^2.0.2",
     "helmet": "^3.15.1",
